_frontend/src/components/public_movie_container.css
.public-movie-wrapper{
    background: rgba(220, 220, 220, 0.6);
    padding: 2em;
    border-radius: 5px;
    margin-bottom: 1em;
}

.public-movie-item-header {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    border-bottom: solid 3px #3d3d3d;
    margin-bottom: 2em;
}

.public-movie-item-header h2 {
    font-weight: bold;
}

.public-movie-item-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    background: white;
    padding: 0.5em;

}

